2020-07-24  David Turner  <david@freetype.org>

	Use new string functions to replace remaining `sprintf' calls.

	This also removes calls to `strncat' and friends.

	* src/ftcommon.c: Include `strbuf.h'.
	(FTDemo_Version, FTDemo_DrawHeader): Do it.

	* src/ftmulti.c: Include `strbuf.h'.
	(main): Do it.

	* src/ttdebug.c: Include `strbuf.h'.
	(tempStr): Increase size to 256 bytes.
	(Cur_U_Line): Do it.
	(RunIns): Make `round_str' static.

2020-07-24  David Turner  <david@freetype.org>

	Add functions to safely append strings to fixed-size buffers.

	Not used yet.

	* src/strbuf.c, src/strbuf.h: New files.

	* Makefile: Updated to compile `strbuf.c'.

2020-07-24  David Turner  <david@freetype.org>

	* src/ftcommon.c (my_face_requester): Improve code readability.

2020-07-24  David Turner  <david@freetype.org>

	Add `ft_strdup' function.

	This simplifies compilation on Windows, which doesn't have this
	function.

	* src/common.c: Include `ftstring.h'.
	(ft_strdup): New function.
	* src/common.h: Updated.

	* src/ftcommon.c (FTDemo_Install_Font), src/ftdiff.c
	(render_state_set_files): Use it.

2020-07-24  David Turner  <david@freetype.org>

	* src/*: Replace simple usage of `sprintf' with `snprintf'.

	Recent gcc compiler versions produce warnings for potentially unsafe
	functions like `sprintf'.

2020-07-06  Werner Lemberg  <wl@gnu.org>

	Synchronize with recent FreeType changes.

	* mac/ftoldmac.c, src/ftbench.c, src/ftchkwd.c, src/ftcommon.c:
	Include `compiler-macros.h', which now contains the definition of
	`FT_UNUSED'.

2020-06-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (event_color_change): Cycle color by luminance.

2020-06-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (grX11Surface): Remove redundant fields.
	(gr_win32_surface_{refresh_rectangle,listen_event}): Updated.

2020-06-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Clean up refresh.
